[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/graphics/background/tileset/cave.res" type="TileSet" id=1]
[ext_resource path="res://assets/objects/label.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/slider/brightness_slider.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/button/buttons.res" type="TileSet" id=5]
[ext_resource path="res://assets/objects/buttons/lots_of_buttons.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/scripts/settings.gd" type="Script" id=8]
[ext_resource path="res://assets/graphics/sliders/slider_off.png" type="Texture" id=9]

[node name="settings" type="Node2D"]
script = ExtResource( 8 )

[node name="front" type="Node2D" parent="."]

[node name="buttons" type="TileMap" parent="front"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 983041, 2, 0, 983042, 2, 1, 983043, 2, 2, 983044, 2, 1, 983045, 2, 2, 983046, 2, 3, 1048577, 2, 196608, 1048578, 2, 196609, 1048579, 2, 196609, 1048580, 2, 196609, 1048581, 2, 196609, 1048582, 2, 196611, 1769474, 9, 0, 1769475, 10, 0, 1769476, 10, 0, 1769477, 10, 0, 1769478, 10, 0, 1769479, 10, 0, 1769480, 10, 0, 1769481, 10, 0, 1769482, 10, 0, 1769483, 10, 0, 1769484, 10, 0, 1769485, 10, 0, 1769486, 10, 0, 1769487, 10, 0, 1769488, 10, 0, 1769489, 11, 0, 1835010, 12, 0, 1835011, 13, 0, 1835012, 13, 0, 1835013, 13, 0, 1835014, 13, 0, 1835015, 13, 0, 1835016, 13, 0, 1835017, 13, 0, 1835018, 13, 0, 1835019, 13, 0, 1835020, 13, 0, 1835021, 13, 0, 1835022, 13, 0, 1835023, 13, 0, 1835024, 13, 0, 1835025, 14, 0, 1900546, 12, 0, 1900547, 13, 0, 1900548, 13, 0, 1900549, 13, 0, 1900550, 13, 0, 1900551, 13, 0, 1900552, 13, 0, 1900553, 13, 0, 1900554, 13, 0, 1900555, 13, 0, 1900556, 13, 0, 1900557, 13, 0, 1900558, 13, 0, 1900559, 13, 0, 1900560, 13, 0, 1900561, 14, 0, 1966082, 12, 0, 1966083, 13, 0, 1966084, 13, 0, 1966085, 13, 0, 1966086, 13, 0, 1966087, 13, 0, 1966088, 13, 0, 1966089, 13, 0, 1966090, 13, 0, 1966091, 13, 0, 1966092, 13, 0, 1966093, 13, 0, 1966094, 13, 0, 1966095, 13, 0, 1966096, 13, 0, 1966097, 14, 0, 2031618, 12, 0, 2031619, 13, 0, 2031620, 13, 0, 2031621, 13, 0, 2031622, 13, 0, 2031623, 13, 0, 2031624, 13, 0, 2031625, 13, 0, 2031626, 13, 0, 2031627, 13, 0, 2031628, 13, 0, 2031629, 13, 0, 2031630, 13, 0, 2031631, 13, 0, 2031632, 13, 0, 2031633, 14, 0, 2097154, 12, 0, 2097155, 13, 0, 2097156, 13, 0, 2097157, 13, 0, 2097158, 13, 0, 2097159, 13, 0, 2097160, 13, 0, 2097161, 13, 0, 2097162, 13, 0, 2097163, 13, 0, 2097164, 13, 0, 2097165, 13, 0, 2097166, 13, 0, 2097167, 13, 0, 2097168, 13, 0, 2097169, 14, 0, 2162690, 12, 0, 2162691, 13, 0, 2162692, 13, 0, 2162693, 13, 0, 2162694, 13, 0, 2162695, 13, 0, 2162696, 13, 0, 2162697, 13, 0, 2162698, 13, 0, 2162699, 13, 0, 2162700, 13, 0, 2162701, 13, 0, 2162702, 13, 0, 2162703, 13, 0, 2162704, 13, 0, 2162705, 14, 0, 2228226, 15, 0, 2228227, 16, 0, 2228228, 16, 0, 2228229, 16, 0, 2228230, 16, 0, 2228231, 16, 0, 2228232, 16, 0, 2228233, 16, 0, 2228234, 16, 0, 2228235, 16, 0, 2228236, 16, 0, 2228237, 16, 0, 2228238, 16, 0, 2228239, 16, 0, 2228240, 16, 0, 2228241, 17, 0 )

[node name="button" parent="front/buttons" instance=ExtResource( 7 )]
margin_left = 16.0
margin_top = 240.0
margin_right = 112.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Menu"
button_type = "scene"
path = "res://assets/scenes/menu.tscn"
repeat = true

[node name="settings" type="Node2D" parent="front"]

[node name="text_color" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 328.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Text Color:"
align = 0
valign = 0
prefix = "Text Color:"
variable = false
repeat = true

[node name="R" parent="front/settings/text_color" instance=ExtResource( 2 )]
margin_top = 16.0
margin_right = 16.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "R:"
align = 0
valign = 0
prefix = "R:"
variable = false
repeat = true

[node name="red" type="HSlider" parent="front/settings/text_color/R"]
margin_left = 16.0
margin_right = 120.0
margin_bottom = 16.0
hint_tooltip = "Unlockable in shop"
custom_icons/grabber_disabled = ExtResource( 9 )
max_value = 0.0
step = 0.004
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Text Color"
red = true

[node name="G" parent="front/settings/text_color" instance=ExtResource( 2 )]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "G:"
align = 0
valign = 0
prefix = "G:"
variable = false
repeat = true

[node name="green" type="HSlider" parent="front/settings/text_color/G"]
margin_left = 16.0
margin_right = 120.0
margin_bottom = 16.0
hint_tooltip = "Unlockable in shop"
custom_icons/grabber_disabled = ExtResource( 9 )
max_value = 1.0
step = 0.004
value = 0.1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Text Color"
green = true

[node name="B" parent="front/settings/text_color" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 16.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "B:"
align = 0
valign = 0
prefix = "B:"
variable = false
repeat = true

[node name="blue" type="HSlider" parent="front/settings/text_color/B"]
margin_left = 16.0
margin_right = 120.0
margin_bottom = 16.0
hint_tooltip = "Unlockable in shop"
custom_icons/grabber_disabled = ExtResource( 9 )
max_value = 1.0
step = 0.004
value = 0.1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Text Color"
blue = true

[node name="roaches" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 328.0
margin_top = 96.0
margin_right = 400.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Roaches:10"
align = 0
valign = 0
prefix = "Roaches:"
global_variable = "settings"
place_in_data = "Roaches"
suffix = ""
repeat = true

[node name="roaches" type="HSlider" parent="front/settings/roaches"]
margin_left = 77.0
margin_right = 168.0
margin_bottom = 16.0
hint_tooltip = "Unlockable in shop"
custom_icons/grabber_disabled = ExtResource( 9 )
max_value = 37.0
value = 10.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Roaches"

[node name="food" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 328.0
margin_top = 120.0
margin_right = 405.0
margin_bottom = 144.0
hint_tooltip = "Increase in shop"
mouse_filter = 0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Food: 10"
align = 0
valign = 0
prefix = "Food: "
global_variable = "settings"
place_in_data = "Start Food"
suffix = ""
repeat = true

[node name="music" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Music:"
align = 0
valign = 0
prefix = "Music:"
variable = false
repeat = true

[node name="music" type="HSlider" parent="front/settings/music"]
margin_left = 48.0
margin_right = 152.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 9 )
min_value = -72.0
max_value = 6.0
step = 0.1
value = 6.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Music Level"

[node name="sound_effects" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 32.0
margin_right = 114.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Sound Effects:"
align = 0
valign = 0
prefix = "Sound Effects:"
variable = false
repeat = true

[node name="effects" type="HSlider" parent="front/settings/sound_effects"]
margin_left = 112.0
margin_right = 216.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 9 )
min_value = -72.0
max_value = 6.0
step = 0.1
value = 6.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
part_of_data = "Sound Effect Level"

[node name="brightness" parent="front/settings" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 56.0
margin_right = 96.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.1, 0.1, 0.1, 1 )
text = "Brightness:"
align = 0
valign = 0
prefix = "Brightness:"
variable = false
repeat = true

[node name="brightness" type="HSlider" parent="front/settings/brightness"]
margin_left = 88.0
margin_right = 192.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 9 )
min_value = 0.1
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blocker" type="Node2D" parent="front"]

[node name="back" type="Node2D" parent="."]
z_index = -1

[node name="cave" type="TileMap" parent="back"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 65536, 3, 0, 65537, 3, 5, 65538, 3, 3, 65539, 3, 4, 65540, 3, 1, 65541, 3, 3, 65542, 3, 4, 65543, 3, 1, 65544, 3, 2, 65545, 3, 1, 65546, 3, 3, 65547, 3, 3, 65548, 3, 2, 65549, 3, 5, 65550, 3, 1, 65551, 3, 5, 65552, 3, 5, 65553, 3, 1, 65554, 3, 5, 65555, 3, 1, 65556, 3, 0, 65557, 3, 0, 65558, 3, 4, 65559, 3, 5, 65560, 3, 2, 65561, 3, 1, 65562, 3, 5, 65563, 3, 3, 65564, 3, 5, 65565, 3, 3, 65566, 3, 3, 65567, 3, 0, 131072, 3, 0, 131073, 3, 3, 131074, 3, 1, 131075, 3, 4, 131076, 3, 2, 131077, 3, 3, 131078, 3, 5, 131079, 3, 4, 131080, 3, 0, 131081, 3, 1, 131082, 3, 3, 131083, 3, 1, 131084, 3, 4, 131085, 3, 1, 131086, 3, 3, 131087, 3, 1, 131088, 3, 0, 131089, 3, 1, 131090, 3, 0, 131091, 3, 1, 131092, 3, 0, 131093, 3, 4, 131094, 3, 5, 131095, 3, 5, 131096, 3, 5, 131097, 3, 5, 131098, 3, 2, 131099, 3, 1, 131100, 3, 3, 131101, 3, 0, 131102, 3, 5, 131103, 3, 0, 196608, 3, 0, 196609, 3, 1, 196610, 3, 3, 196611, 3, 2, 196612, 3, 5, 196613, 3, 4, 196614, 3, 0, 196615, 3, 2, 196616, 3, 1, 196617, 3, 5, 196618, 3, 2, 196619, 3, 0, 196620, 3, 0, 196621, 3, 5, 196622, 3, 3, 196623, 3, 5, 196624, 3, 5, 196625, 3, 2, 196626, 3, 4, 196627, 3, 4, 196628, 3, 3, 196629, 3, 3, 196630, 3, 3, 196631, 3, 3, 196632, 3, 4, 196633, 3, 5, 196634, 3, 3, 196635, 3, 5, 196636, 3, 3, 196637, 3, 5, 196638, 3, 5, 196639, 3, 0, 262144, 3, 0, 262145, 3, 1, 262146, 3, 0, 262147, 3, 4, 262148, 3, 0, 262149, 3, 4, 262150, 3, 4, 262151, 3, 5, 262152, 3, 0, 262153, 3, 4, 262154, 3, 3, 262155, 3, 0, 262156, 3, 4, 262157, 3, 3, 262158, 3, 2, 262159, 3, 1, 262160, 3, 3, 262161, 3, 2, 262162, 3, 4, 262163, 3, 2, 262164, 3, 2, 262165, 3, 2, 262166, 3, 4, 262167, 3, 4, 262168, 3, 0, 262169, 3, 2, 262170, 3, 2, 262171, 3, 3, 262172, 3, 4, 262173, 3, 1, 262174, 3, 2, 262175, 3, 0, 327680, 3, 0, 327681, 3, 3, 327682, 3, 2, 327683, 3, 1, 327684, 3, 1, 327685, 3, 3, 327686, 3, 5, 327687, 3, 3, 327688, 3, 2, 327689, 3, 4, 327690, 3, 0, 327691, 3, 4, 327692, 3, 3, 327693, 3, 3, 327694, 3, 0, 327695, 3, 5, 327696, 3, 4, 327697, 3, 5, 327698, 3, 0, 327699, 3, 2, 327700, 3, 2, 327701, 3, 5, 327702, 3, 2, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 1, 327707, 3, 1, 327708, 3, 2, 327709, 3, 0, 327710, 3, 3, 327711, 3, 0, 393216, 3, 0, 393217, 3, 3, 393218, 3, 5, 393219, 3, 5, 393220, 3, 0, 393221, 3, 0, 393222, 3, 1, 393223, 3, 1, 393224, 3, 5, 393225, 3, 2, 393226, 3, 3, 393227, 3, 4, 393228, 3, 5, 393229, 3, 1, 393230, 3, 4, 393231, 3, 2, 393232, 3, 4, 393233, 3, 4, 393234, 3, 5, 393235, 3, 4, 393236, 3, 1, 393237, 3, 2, 393238, 3, 1, 393239, 3, 2, 393240, 3, 2, 393241, 3, 0, 393242, 3, 1, 393243, 3, 5, 393244, 3, 2, 393245, 3, 2, 393246, 3, 2, 393247, 3, 0, 458752, 3, 0, 458753, 3, 1, 458754, 3, 5, 458755, 3, 5, 458756, 3, 1, 458757, 3, 3, 458758, 3, 4, 458759, 3, 1, 458760, 3, 5, 458761, 3, 4, 458762, 3, 0, 458763, 3, 1, 458764, 3, 4, 458765, 3, 4, 458766, 3, 4, 458767, 3, 1, 458768, 3, 2, 458769, 3, 1, 458770, 3, 1, 458771, 3, 0, 458772, 3, 3, 458773, 3, 4, 458774, 3, 1, 458775, 3, 4, 458776, 3, 3, 458777, 3, 0, 458778, 3, 3, 458779, 3, 5, 458780, 3, 4, 458781, 3, 3, 458782, 3, 2, 458783, 3, 0, 524288, 3, 0, 524289, 3, 3, 524290, 3, 2, 524291, 3, 1, 524292, 3, 2, 524293, 3, 1, 524294, 3, 2, 524295, 3, 0, 524296, 3, 4, 524297, 3, 4, 524298, 3, 0, 524299, 3, 5, 524300, 3, 2, 524301, 3, 2, 524302, 3, 2, 524303, 3, 3, 524304, 3, 2, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 2, 524309, 3, 3, 524310, 3, 0, 524311, 3, 1, 524312, 3, 3, 524313, 3, 3, 524314, 3, 1, 524315, 3, 5, 524316, 3, 0, 524317, 3, 3, 524318, 3, 2, 524319, 3, 0, 589824, 3, 0, 589825, 3, 5, 589826, 3, 0, 589827, 3, 5, 589828, 3, 3, 589829, 3, 3, 589830, 3, 4, 589831, 3, 1, 589832, 3, 3, 589833, 3, 3, 589834, 3, 5, 589835, 3, 3, 589836, 3, 3, 589837, 3, 3, 589838, 3, 5, 589839, 3, 1, 589840, 3, 4, 589841, 3, 0, 589842, 3, 2, 589843, 3, 5, 589844, 3, 2, 589845, 3, 4, 589846, 3, 2, 589847, 3, 3, 589848, 3, 2, 589849, 3, 1, 589850, 3, 3, 589851, 3, 4, 589852, 3, 1, 589853, 3, 4, 589854, 3, 5, 589855, 3, 0, 655360, 3, 0, 655361, 3, 3, 655362, 3, 3, 655363, 3, 5, 655364, 3, 1, 655365, 3, 4, 655366, 3, 4, 655367, 3, 1, 655368, 3, 2, 655369, 3, 1, 655370, 3, 0, 655371, 3, 3, 655372, 3, 0, 655373, 3, 5, 655374, 3, 5, 655375, 3, 2, 655376, 3, 0, 655377, 3, 3, 655378, 3, 3, 655379, 3, 0, 655380, 3, 3, 655381, 3, 5, 655382, 3, 5, 655383, 3, 3, 655384, 3, 3, 655385, 3, 4, 655386, 3, 2, 655387, 3, 1, 655388, 3, 1, 655389, 3, 2, 655390, 3, 3, 655391, 3, 0, 720896, 3, 0, 720897, 3, 1, 720898, 3, 3, 720899, 3, 5, 720900, 3, 3, 720901, 3, 3, 720902, 3, 5, 720903, 3, 5, 720904, 3, 1, 720905, 3, 4, 720906, 3, 5, 720907, 3, 3, 720908, 3, 3, 720909, 3, 4, 720910, 3, 4, 720911, 3, 0, 720912, 3, 1, 720913, 3, 5, 720914, 3, 1, 720915, 3, 5, 720916, 3, 3, 720917, 3, 3, 720918, 3, 5, 720919, 3, 4, 720920, 3, 5, 720921, 3, 4, 720922, 3, 0, 720923, 3, 5, 720924, 3, 4, 720925, 3, 5, 720926, 3, 1, 720927, 3, 0, 786432, 3, 0, 786433, 3, 4, 786434, 3, 3, 786435, 3, 2, 786436, 3, 3, 786437, 3, 3, 786438, 3, 0, 786439, 3, 0, 786440, 3, 2, 786441, 3, 3, 786442, 3, 0, 786443, 3, 0, 786444, 3, 2, 786445, 3, 4, 786446, 3, 0, 786447, 3, 4, 786448, 3, 3, 786449, 3, 1, 786450, 3, 0, 786451, 3, 4, 786452, 3, 2, 786453, 3, 5, 786454, 3, 0, 786455, 3, 0, 786456, 3, 4, 786457, 3, 1, 786458, 3, 3, 786459, 3, 2, 786460, 3, 5, 786461, 3, 5, 786462, 3, 3, 786463, 3, 0, 851968, 3, 0, 851969, 3, 4, 851970, 3, 5, 851971, 3, 4, 851972, 3, 3, 851973, 3, 0, 851974, 3, 3, 851975, 3, 5, 851976, 3, 2, 851977, 3, 4, 851978, 3, 1, 851979, 3, 4, 851980, 3, 1, 851981, 3, 5, 851982, 3, 3, 851983, 3, 0, 851984, 3, 4, 851985, 3, 2, 851986, 3, 3, 851987, 3, 0, 851988, 3, 4, 851989, 3, 1, 851990, 3, 5, 851991, 3, 1, 851992, 3, 0, 851993, 3, 1, 851994, 3, 3, 851995, 3, 2, 851996, 3, 5, 851997, 3, 2, 851998, 3, 5, 851999, 3, 0, 917504, 3, 0, 917505, 3, 4, 917506, 3, 4, 917507, 3, 1, 917508, 3, 5, 917509, 3, 3, 917510, 3, 5, 917511, 3, 4, 917512, 3, 1, 917513, 3, 4, 917514, 3, 3, 917515, 3, 0, 917516, 3, 2, 917517, 3, 0, 917518, 3, 1, 917519, 3, 0, 917520, 3, 1, 917521, 3, 1, 917522, 3, 0, 917523, 3, 2, 917524, 3, 1, 917525, 3, 4, 917526, 3, 5, 917527, 3, 4, 917528, 3, 3, 917529, 3, 4, 917530, 3, 5, 917531, 3, 2, 917532, 3, 4, 917533, 3, 5, 917534, 3, 1, 917535, 3, 0, 983040, 3, 0, 983041, 3, 1, 983042, 3, 3, 983043, 3, 1, 983044, 3, 0, 983045, 3, 1, 983046, 3, 5, 983047, 3, 3, 983048, 3, 2, 983049, 3, 2, 983050, 3, 3, 983051, 3, 1, 983052, 3, 1, 983053, 3, 1, 983054, 3, 2, 983055, 3, 4, 983056, 3, 0, 983057, 3, 1, 983058, 3, 4, 983059, 3, 3, 983060, 3, 0, 983061, 3, 1, 983062, 3, 0, 983063, 3, 0, 983064, 3, 5, 983065, 3, 2, 983066, 3, 5, 983067, 3, 2, 983068, 3, 1, 983069, 3, 3, 983070, 3, 4, 983071, 3, 0, 1048576, 3, 0, 1048577, 3, 3, 1048578, 3, 3, 1048579, 3, 3, 1048580, 3, 4, 1048581, 3, 1, 1048582, 3, 2, 1048583, 3, 2, 1048584, 3, 1, 1048585, 3, 0, 1048586, 3, 4, 1048587, 3, 4, 1048588, 3, 4, 1048589, 3, 4, 1048590, 3, 4, 1048591, 3, 5, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 5, 1048595, 3, 0, 1048596, 3, 1, 1048597, 3, 2, 1048598, 3, 3, 1048599, 3, 1, 1048600, 3, 5, 1048601, 3, 5, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 4, 1048605, 3, 2, 1048606, 3, 3, 1048607, 3, 0, 1114112, 3, 0, 1114113, 3, 0, 1114114, 3, 0, 1114115, 3, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 0, 1114133, 3, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1114139, 3, 0, 1114140, 3, 0, 1114141, 3, 0, 1114142, 3, 0, 1114143, 3, 0 )
[connection signal="value_changed" from="front/settings/text_color/R/red" to="front/settings/text_color/R/red" method="_on_brightness_value_changed"]
[connection signal="value_changed" from="front/settings/text_color/G/green" to="front/settings/text_color/G/green" method="_on_brightness_value_changed"]
[connection signal="value_changed" from="front/settings/text_color/B/blue" to="front/settings/text_color/B/blue" method="_on_brightness_value_changed"]
[connection signal="value_changed" from="front/settings/roaches/roaches" to="front/settings/roaches/roaches" method="_on_brightness_value_changed"]
[connection signal="value_changed" from="front/settings/music/music" to="front/settings/music/music" method="_on_music_value_changed"]
[connection signal="value_changed" from="front/settings/sound_effects/effects" to="front/settings/sound_effects/effects" method="_on_sound_value_changed"]
[connection signal="value_changed" from="front/settings/brightness/brightness" to="front/settings/brightness/brightness" method="_on_brightness_value_changed"]
